# technopark-test

./: .env.example  .gitignore  Dockerfile  EDA.ipynb  README.md  pipeline.sh  postman_collection.json  requirements.txt
configs/: .pre-commit-config.yaml  pyproject.toml
src/: api.py  data_proccessing.py  mlflow_manage.py  model.py  schemas.py  train.py
tests/: pytest.ini  test_api.py
